# avataa-templates

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  NOTICE  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  supervisord.conf
app/: .flake8  alembic.ini  config.py  create_fastapi_app.py  database.py  di.py  exceptions.py  logs.py  main.py  models.py  run_kafka_cons.py
app/application/common/: uow.py
app/application/exporter/: dto.py  exceptions.py  interactors.py
app/application/importer/: dto.py  exceptions.py  interactors.py
app/application/inventory_changes/: interactors.py
app/application/paramater_validation/: dto.py  interactors.py
app/application/template/create/: exceptions.py  interactors.py
app/application/template/read/: dto.py  exceptions.py  interactors.py  mapper.py
app/application/template/reader/: dto.py  interactors.py  interfaces.py
app/application/template/update/: dto.py  exceptions.py  interactors.py
app/application/template_object/create/: dto.py  exceptions.py  interactors.py
app/application/template_object/delete/: dto.py  exceptions.py  interactors.py
app/application/template_object/read/: dto.py  exceptions.py  interactors.py  mapper.py
app/application/template_object/update/: dto.py  exceptions.py  interactors.py
app/application/template_parameter/create/: dto.py  exceptions.py  (+2 more)
app/application/tmo_validation/: dto.py  exceptions.py  interactors.py
app/application/tprm_validation/: dto.py  exceptions.py  interactors.py
app/domain/common/: consts.py  exceptions.py  value_object.py
app/domain/exporter/: enrich_service.py  export_service.py  query.py
app/domain/importer/: enrich_service.py  validate_service.py
app/domain/inventory_tprm/: aggregate.py  query.py
app/domain/parameter_validation/: query.py
app/domain/shared/: export_service.py  query.py
app/domain/template/: aggregate.py  command.py  query.py  template.py
app/domain/template_object/: aggregate.py  command.py  query.py  template_object.py
app/domain/template_parameter/: aggregate.py  command.py  query.py  service.py  template_parameter.py
app/domain/tmo_validation/: aggregate.py  query.py
app/domain/tprm_validation/: aggregate.py  query.py
app/infrastructure/di/: providers.py
app/infrastructure/formatter/: export_gateway.py
app/infrastructure/grpc/: base_grpc_repo.py  channel_manager.py  config.py
app/migrations/: env.py
app/migrations/versions/: 2024_12_27_1454-3060811d39b7_initial_migration.py  2025_01_03_1225-464995b13f80_initial_db.py  2025_01_03_1608-5bb74e88c941_initial_db.py  2025_01_09_1715-5d6d957bcbdb_initial_db.py  2025_01_10_1100-8fe8aeb77055_initial_db.py  2025_09_11_1307-c5e4fd2ae2c5_add_index.py  b270efb5b299_add_valid_to_model.py  b319111c3a75_.py  b6eaa5905788_.py  c9df31a8e483_create_template_table.py  fab964905f49_add_template_template_object_and_.py
app/presentation/api/: depends_stub.py
app/presentation/security/: security_data_models.py  security_factory.py  security_interface.py
app/routers/: template_object_router.py  template_parameter_router.py  template_registry_router.py  template_router.py
app/schemas/: template_schemas.py
app/services/: template_object_services.py  template_parameter_services.py  template_registry_services.py  template_services.py
app/services/common/: uow.py
app/utils/: constraint_validators.py  type_casting_functions.py  val_type_validators.py
tests/: conftest.py  test_router.py  test_template_object_gateway.py  test_template_object_repo.py
tests/mocks/: grpc_client.py
tests/unit/application/: test_template_reader.py
(+123 files in other folders)
