[project]
name = "object-templates"
version = "3.0.40"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "confluent-kafka[protobuf,schemaregistry]==2.12.2",
    "dishka==1.7.2",
    "fastapi==0.124.0",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "protobuf==6.33.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "python-keycloak==5.8.1",
    "python-multipart==0.0.20",
    "sqlalchemy[asyncio]==2.0.44",
    "uvicorn==0.38.0",
    "xlsxwriter==3.2.9",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "grpcio-tools>=1.75.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ty==0.0.1a23",
    "types-cachetools==6.2.0.20251022",
]
lint = [
    "ruff==0.14.8",
]
tests = [
    "httpx==0.28.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "testcontainers==4.13.3",
]
security = [
    "pip-audit==2.10.0",
]
migrations = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.44",
]
