[project]
name = "object-templates"
version = "3.0.41"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "confluent-kafka[protobuf,schemaregistry]==2.13.0",
    "dishka==1.8.0",
    "fastapi==0.129.0",
    "grpcio==1.78.0",
    "openpyxl==3.1.5",
    "pandas==3.0.0",
    "protobuf==6.33.5",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.11.0",
    "python-keycloak==7.0.3",
    "python-multipart==0.0.22",
    "sqlalchemy[asyncio]==2.0.46",
    "uvicorn==0.40.0",
    "xlsxwriter==3.2.9",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "grpcio-tools>=1.78.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ty==0.0.16",
    "types-cachetools==6.2.0.20251022",
]
lint = [
    "ruff==0.15.0",
]
tests = [
    "httpx==0.28.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "testcontainers==4.14.1",
]
security = [
    "pip-audit==2.10.0",
]
migrations = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.46",
]
